# bevy-factory-game

./: Cargo.toml  DESIGN.md  README.md
preassets/: buildings.blend  tile.xcf
src/: assets.rs  buildable.rs  buildable2.rs  building.rs  claw.rs  common.rs  conveyor.rs  frag.glsl  furnace.rs  iso.rs  iso_coord.rs  iso_pos.rs  item.rs  machine.rs  main.rs  mill.rs  mini_rand.rs  prelude.rs  resource_nodes.rs  spatial_map.rs  sprite_render.rs  trading.rs  ui.rs  util.rs
src/buildable/: base.rs  claw.rs  conveyor.rs  destroyer.rs  drill.rs  machine.rs  machine_type.rs  spawn.rs  spawner.rs  storage.rs  support.rs  util.rs
src/buildable/claw/: buildable.rs  logic.rs
src/buildable/machine/: buildable.rs  shape.rs  typee.rs
src/buildable2/: base.rs  claw.rs  conveyor.rs  destroyer.rs  machine.rs  spawn.rs  spawner.rs  support.rs
src/buildable2/claw/: buildable.rs
src/buildable2/machine/: buildable.rs  logic.rs  shape.rs  typee.rs
src/iso/: axis.rs  constants.rs  direction.rs  points.rs  pos.rs  snapping.rs  spatial_map.rs  tests.rs
src/item/: animation.rs  animator.rs  base.rs  container.rs  container_debug.rs  element.rs  known_item.rs  reference_item.rs
src/ui/: action.rs  camera.rs  cursor.rs  tooltip.rs
src/ui/action/: execute.rs  ok.rs  update.rs
