[package]
authors = ["Joshua Maros <60271685+joshua-maros@users.noreply.github.com>"]
edition = "2018"
name = "fav-genre"
resolver = "2"
version = "0.1.0"

[features]
# Disables animation interpolation to more easily verify the soundness of ticking mechanisms.
no-interpolation = []
# Makes ticks run four times slower than normal.
quarter-speed = []
# Draw green circles around open containers and red circles around blocked containers.
draw-containers = []

[dependencies]
bevy_obj = "0.6.0"
dyn-clone = "1.0.4"
maplit = "1.0.2"
itertools = "0.10.3"
scones = "0.1.2"
wyhash = "0.5.0"

[dependencies.bevy]
features = ["dynamic"] # Enable faster iterative compilation times.
version = "0.6.1"

# Enable optimizations for dependencies (incl. Bevy),
# but not for our own code:
[profile.dev.package."*"]
opt-level = 3
